Fixed responsive width still have to figure white space on Register page

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,74 +1,70 @@
 @import url('https://fonts.googleapis.com/css?family=Numans');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.container{
-height: 100% !important;
-align-content: center !important;
+.container {
+    height: 100% !important;
+    align-content: center !important;
 }
 
-.card{
-height: 370px;
-margin-top: auto;
-margin-bottom: auto;
-width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
+body>div.container-fluid.text-light.main-container>div>div>div>div {
+    height: 370px;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.5) !important;
 }
 
-.card-header h3{
-color: white;
+.card-header h3 {
+    color: #12181c;
 }
 
-.social_icon{
-position: absolute;
-right: 20px;
-top: -45px;
+.social_icon {
+    position: absolute;
+    right: 20px;
+    top: -45px;
 }
 
-.input-group-prepend span{
-width: 50px;
-background-color: #FFC312 !important;
-color: black;
-border:0 !important;
+.input-group-prepend span {
+    width: 50px;
+    color: black;
+    border: 0 !important;
 }
 
-input:focus{
-outline: 0 0 0 0  !important;
-box-shadow: 0 0 0 0 !important;
+input:focus {
+    outline: 0 0 0 0 !important;
+    box-shadow: 0 0 0 0 !important;
 
 }
 
-.remember{
-color: white;
+.remember {
+    color: #12181c;
 }
 
-.remember input
-{
-width: 20px;
-height: 20px;
-margin-left: 15px;
-margin-right: 5px;
+.remember input {
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+    margin-right: 5px;
 }
 
-.login_btn{
-color: black;
-background-color: #FFC312;
-width: 100px;
+.login_btn {
+    color: white !important;
+    width: 100px !important;
 }
 
-.login_btn:hover{
-color: black;
-background-color: white;
+.links {
+    color: white;
 }
 
-.links{
-color: white;
+.links a {
+    margin-left: 4px;
 }
 
-.links a{
-margin-left: 4px;
+#text {
+    color: #12181c;
 }
