--- a/public/css/loginregis.css
+++ b/public/css/loginregis.css
@@ -12,38 +12,24 @@ align-content: center !important;
 }
 
 .card{
-height: 370px;
+width: 90vw;
 margin-top: auto;
 margin-bottom: auto;
-width: 400px;
-background-color: rgba(0,0,0,0.5) !important;
+background-color: white !important;
 }
 
 .card-header h3{
-color: white;
-}
-
-.social_icon{
-position: absolute;
-right: 20px;
-top: -45px;
+color: #12181c;
 }
 
 .input-group-prepend span{
 width: 50px;
-background-color: #9b5de5 !important;
+border: 0.25rem !important;
 color: black;
-border:0 !important;
-}
-
-input:focus{
-outline: 0 0 0 0  !important;
-box-shadow: 0 0 0 0 !important;
-
 }
 
 .remember{
-color: white;
+color: #12181c;
 }
 
 .remember input
@@ -56,40 +42,17 @@ margin-right: 5px;
 
 .login_btn{
 color: black;
-background-image: linear-gradient(#9b5de5, #ffcbf2);
 width: 100px;
 }
 
 .login_btn:hover{
 color: black;
-background-color: white;
-}
-
-.links{
-color: white;
 }
 
 .links a{
 margin-left: 4px;
 }
 
-.card-footer a {
-    color: #a0c4ff;
+h6{
+    color: #12181c;
 }
-
-a:hover {
-    color: white;
-    font-size: 15px;
-}
-
-
-.card-footer .submit {
-    color: black;
-    background-image: linear-gradient(#9b5de5, #ffcbf2) !important;
-    width: 100px;
-    }
-    .submit:hover {
-        color: white;
-        font-size: 15px;
-    }
-
